<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingList">Nowa lista zakupów</string>
    <string name="options">Ustawienia</string>
    <string name="action_product_created">com.example.administrator.myapka.PRODUCT_CREATED</string>
    <string name="action_product_edit">com.example.administrator.myapka.PRODUCT_EDIT</string>
    <string name="action_product_list">com.example.administrator.myapka.PRODUCT_LIST</string>
    <string name="permission_broadcast">com.example.administrator.myapka.permission.BROADCAST</string>
    <string name="title_activity_product_list">Twoja lista zakupów</string>
    <string name="title_activity_options">Ustawienia</string>
    <string name="title_activity_product_add">Produkt</string>
    <string name="name">Nazwa produktu</string>
    <string name="price">Cena</string>
    <string name="quantity">Ilość/Liczba</string>
    <string name="bought">Kupione:</string>
    <string name="deleteBtn">Usuń produkt</string>
    <string name="addBtn">Dodaj produkt</string>
    <string name="saveBtn">Zapisz</string>
    <string name="language">Język</string>
    <string name="colour">Kolor</string>
    <string name="selectLanguage">Wybierz język</string>
    <string name="languageKey">LANGUAGE_KEY</string>
    <string name="themeKey">THEME_KEY</string>
    <string name="shopList">Lista sklepów</string>
    <string name="shopName">Nazwa sklepu</string>
    <string name="description">Opis</string>
    <string name="radius">Promień</string>
    <string name="latitude">Szerokoś geograficzna</string>
    <string name="longitude">Długość geograficzna</string>
    <string name="title_activity_shop_add">Sklep</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_shop_list">Lista sklepów</string>
    <string name="add_shop">Dodaj sklep</string>
    <string name="map">Mapa</string>
    <string name="comeback">Wróć</string>
    <string name="next">Następny</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="random">Losowo</string>
    <string name="web">Strona</string>
    <string name="webview">WebView</string>



    <string-array name="languages">
        <item>Polish</item>
        <item>English</item>
    </string-array>
</resources>
