<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/widget_next"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-17dp"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/webview"
        android:text="@string/web"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="314dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="29dp"
        tools:src="@drawable/itachi" />

    <Button
        android:id="@+id/random_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-83dp"
        android:layout_marginTop="451dp"
        android:layout_toEndOf="@+id/widget_stop"
        android:text="@string/random" />

    <Button
        android:id="@+id/widget_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/random_image"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="92dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/widget_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widget_play"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-4dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/widget_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/widget_stop"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="0dp"
        android:text="@string/next" />


</RelativeLayout>