<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <TextView
            android:id="@+id/shopName"
            app:layout_constraintTop_toBottomOf="@id/add_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopName"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/shopName"
            android:text="@string/description"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:text="@string/radius"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radius"
            android:text="@string/latitude"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/latitude"
            android:text="@string/longitude"
            android:textSize="18dp" />

    </LinearLayout>

</RelativeLayout>