<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProductAddActivity"
    tools:showIn="@layout/activity_options">
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/language" />
        <Spinner
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/languages"
            android:prompt="@string/selectLanguage"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="80dp"
            />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/colour" />

        <Switch
            android:id="@+id/colour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="85dp" />
    </LinearLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveBtn"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="149dp" />
    </LinearLayout>




</android.support.constraint.ConstraintLayout>