<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/add_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18dp" />
        <CheckBox
            android:id="@+id/product_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productName"
        android:text="@string/price"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/productQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productPrice"
        android:text="@string/quantity"
        android:textSize="18dp" />

    </LinearLayout>

</RelativeLayout>
